Responsive landing page for any brand

--- a/index.html
+++ b/index.html
@@ -3,9 +3,161 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <script src="https://kit.fontawesome.com/0717a82608.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <nav class="navbar">
+      <div class="logo">
+        <a href="#" class="icon"><i class="fab fa-pied-piper-pp fa-2x"></i></a>
+        <a href="#" class="title">Pied Piper</a>
+      </div>
+      <ul class="links">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+      <div class="menu">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </nav>
+    <main>
+      <div class="content">
+        <div class="content-info">
+          <h1 class="gradient-title">The best compression software ever created.</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, consequatur labore odio, inventore excepturi perferendis expedita aspernatur officiis ea earum et! Fuga quod minima maxime, omnis voluptatum incidunt deleniti similique!</p>
+          <input type="text" placeholder="E-mail">
+          <button>Sign Up</button>
+          <div class="socials-icons">
+            <i class="fab fa-github fa-3x"></i>
+            <i class="fab fa-facebook-square fa-3x"></i>
+            <i class="fab fa-twitter fa-3x"></i>
+            <i class="fab fa-instagram fa-3x"></i>
+          </div>
+        </div>
+        <div class="content-image"><img src="compression.svg" class="folder-image" alt="" height="400px" width="400px"></div>
+      </div>
+      <h1 class="lonely-title">Built for you</h1>
+      <div class="content-2">
+        <div class="build">
+          <div class="quote">
+            <div class="image"></div>
+            <div class="testimony">
+              <h3>Braulio Jones / <span>Founder & CEO</span></h3>
+              <h4><i class="fab fa-steam"></i> Steam</h4>
+            </div>
+          </div>
+          <div class="text">
+            "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere aliquid at adipisci nesciunt, distinctio eos necessitatibus sunt corporis cupiditate quia deleniti magni ex recusandae. Quae expedita possimus natus dolores architecto."
+          </div>
+        </div>
+        <div class="testimony-image"></div>
+      </div>
+      <div class="content-3">
+        <div class="api">
+          <i class="fas fa-shipping-fast" style="color: white;"></i>
+          <h3>Faster than an API</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ipsa quo cum, porro, odit labore perspiciatis vitae quis saepe ipsum error magnam voluptas sapiente, iure asperiores ali.</p>
+        </div>
+        <div class="use">
+          <i class="fas fa-laptop-house"></i>
+          <h3>Easy to Use</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ipsa quo cum, porro, odit labore perspiciatis vitae quis saepe ipsum error magnam voluptas sap.</p>
+        </div>
+        <div class="collab">
+          <i class="fas fa-users"></i>
+          <h3>More Collaborative</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab ipsa quo cum, porro, odit labore perspiciatis vitae quis saepe ipsum error magnam voluptas sapiente./p>
+        </div>
+      </div>
+      <div class="content-4">
+        <h1 class="savings">Start saving time on your next project</h1>
+        <p class="effort">Creating UI design takes time and effort, so get the most out of your design by handing off screens at the right time to the right people.</p>
+        <div class="download">
+          <div class="web-app">
+            <h3><i class="fas fa-globe"></i> Sign up for web app</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto nostrum consequatur labore ad officiis nam, impedit perspiciatis modi.</p>
+            <input type="text" placeholder="name@company.com">
+            <button>Start now</button>
+          </div>
+          <div class="desktop-app">
+            <h3><i class="fas fa-desktop"></i> Download the desktop app</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sit a dignissimos amet. Dignissimos sint accusamus.</p>
+            <button>Download</button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="links-footer">
+        <div class="information">
+          <i class="fab fa-pied-piper-pp fa-2x"></i>
+          <ul>
+            <li>Download</li>
+            <li>Web app</li>
+            <li>Pricing</li>
+            <li>Enterprise</li>
+            <li>Integrations</li>
+            <li>Changelog</li>
+          </ul>
+        </div>
+        <div class="product">
+          <h1>Product</h1>
+          <ul>
+            <li>Hand-off</li>
+            <li>Inspect</li>
+            <li>Review & Comment</li>
+            <li>Versioning</li>
+            <li>Pixel Checker</li>
+            <li>Open Design</li>
+          </ul>
+        </div>
+        <div class="company">
+          <h1>Company</h1>
+          <ul>
+            <li>About Us</li>
+            <li>Contact Us</li>
+            <li>Blog</li>
+            <li>Jobs</li>
+            <li>Security</li>
+            <li>Technology</li>
+          </ul>
+        </div>
+        <div class="support">
+          <h1>Support</h1>
+          <ul>
+            <li>Getting started</li>
+            <li>Help center</li>
+            <li>Server status</li>
+            <li>Suggest a feature</li>
+            <li>Report a bug</li>
+            <li>Roadmap</li>
+          </ul>
+        </div>
+      </div>
+      <div class="links-footer-2">
+        <ul>
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-facebook-square"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-youtube"></i></li>
+          <li><i class="fab fa-github"></i></li>
+          <li><i class="fab fa-reddit-alien"></i></li>
+          <li><i class="fab fa-linkedin"></i></li>
+        </ul>
+        <ul>
+          <li>Terms of service</li>
+          <li>Privacy policy</li>
+          <li>Licenses</li>
+          <li>Sitemap</li>
+        </ul>
+        <h3>Copyright © 2021 PiedPiper</h3>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
